# IR_assignments

./: .gitignore
src/group10_assignment_1/: CMakeLists.txt  package.xml
src/group10_assignment_2/: CMakeLists.txt  package.xml
src/group10_ex4/: CMakeLists.txt  package.xml
src/group10_ex4/launch/: exercise4_full.launch.py
src/group10_ex4/src/: burrow_client.cpp  burrow_client_node.cpp  turtlebot_server.cpp  turtlebot_server_node.cpp
src/group10_ex4/srv/: CheckResources.srv  RefillBurrow.srv
